links to base, overlapping issue,login page

--- a/static/css/test.css
+++ b/static/css/test.css
@@ -8,6 +8,7 @@ div.h {
 	}
 
 div.s {	
+	z-index: -1;
   position: relative;
 	bottom: 5px; 
 	height:  40px;
